# sptui

./: README.md  entry.py  install.ps1  install.sh  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
sptui/: __main__.py  ai.py  app.py  client.py  config.py  screens.py
sptui/widgets/: main_panel.py  now_playing.py  sidebar.py
tests/: test_imports.py  test_pipx.py
