[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "sptui"
version = "0.1.0"
description = "Spotify TUI client"
requires-python = ">=3.10"
dependencies = [
    "textual>=0.60.0",
    "spotipy>=2.23.0",
]

[project.scripts]
sptui = "sptui.__main__:main"
